--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,124 +1,95 @@
 /**index.wxss**/
-page {
-    background: #F6F6F6;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+@import "../../assets/icon/iconfont.wxss";
+
+swiper {
+  width: 100%;
 }
 
-.userinfo, .uploader, .tunnel {
-    margin-top: 40rpx;
-    height: 140rpx;
-    width: 100%;
-    background: #FFF;
-    border: 1px solid rgba(0, 0, 0, .1);
-    border-left: none;
-    border-right: none;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    transition: all 300ms ease;
+.search-bar {
+  border-radius:5px;
+  border:1px solid #f10000;
+  margin:5px 8px;
+  display:flex;
 }
 
-.userinfo-avatar {
-    width: 100rpx;
-    height: 100rpx;
-    margin: 20rpx;
-    border-radius: 50%;
+.search-bar .search-keyword-input {
+  flex-grow: 1;
+  height:100%;
+  font-size:1rem;
+  padding:5px 8px;
 }
 
-.userinfo-nickname {
-    font-size: 32rpx;
-    color: #007AFF;
+.search-bar .search-btn {
+  border-radius:0 5px 5px 0;
+  padding:0 8px;
+  line-height:2rem;
+  color:#fff;
+  background-color:#f10000;
 }
 
-.uploader, .tunnel {
-    height: auto;
-    padding: 0 0 0 40rpx;
-    flex-direction: column;
-    align-items: flex-start;
-    box-sizing: border-box;
+.h2 {
+  color: #f10000;
+  padding: 8px;
+  display: block;
 }
 
-.uploader-text, .tunnel-text {
-    width: 100%;
-    line-height: 52px;
-    font-size: 34rpx;
-    color: #007AFF;
+.h2 text.iconfont {
+  display: inline-block;
+  margin-right: .5rem;
 }
 
-.uploader-container {
-    width: 100%;
-    height: 400rpx;
-    padding: 20rpx 20rpx 20rpx 0;
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    box-sizing: border-box;
-    border-top: 1px solid rgba(0, 0, 0, .1);
+.product-grid-list {
+  display:flex;
+  flex-direction:row;
+  flex-wrap:wrap;
+  align-content:center;
+  justify-content:space-around;
+  background-color: #cecece;
+  padding: 0 8px 8px;
 }
 
-.uploader-image {
-    width: 100%;
-    height: 360rpx;
+.product-grid-list .product-item {
+  width: 49%;
 }
 
-.tunnel {
-    padding: 0 0 0 40rpx;
+.product-item {
+  margin: 8px 2% 0 0;
+  background-color: #ffffff;
 }
 
-.tunnel-text {
-    position: relative;
-    color: #222;
-    display: flex;
-    flex-direction: row;
-    align-content: center;
-    justify-content: space-between;
-    box-sizing: border-box;
-    border-top: 1px solid rgba(0, 0, 0, .1);
+.product-item:nth-child(2n) {
+  margin-right: 0;
 }
 
-.tunnel-text:first-child {
-    border-top: none;
+.product-item image {
+  width: 98%;
+  margin: 1%;
 }
 
-.tunnel-switch {
-    position: absolute;
-    right: 20rpx;
-    top: -2rpx;
+.product-item .product-item-name {
+  display: block;
+  padding: 5px;
+  height: 2.2rem;
+  font-size: .8rem;
+  line-height: 1.1rem;
 }
 
-.disable {
-    color: #888;
+.product-item .product-item-info {
+  display: flex;
+  padding: 5px;
 }
 
-.service {
-    position: fixed;
-    right: 40rpx;
-    bottom: 40rpx;
-    width: 140rpx;
-    height: 140rpx;
-    border-radius: 50%;
-    background: linear-gradient(#007AFF, #0063ce);
-    box-shadow: 0 5px 10px rgba(0, 0, 0, .3);
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    transition: all 300ms ease;
+.product-item .product-item-info .product-item-price {
+  color: #f10000;
+  flex-grow: 1;
+  font-size: .8rem;
+  line-height: 1.1rem;
 }
 
-.service-button {
-    position: absolute;
-    top: 40rpx;
-}
-
-.service:active {
-    box-shadow: none;
-}
-
-.request-text {
-    padding: 20rpx 0;
-    font-size: 24rpx;
-    line-height: 36rpx;
-    word-break: break-all;
+.product-item .product-item-info .product-item-sale-count {
+  color: #dddddd;
+  text-align: right;
+  flex-grow: 1;
+  font-size: .8rem;
+  line-height: 1.1rem;
 }
