--- a/pages/home/index.wxss
+++ b/pages/home/index.wxss
@@ -1,1 +1,105 @@
 /* pages/home/index.wxss */
+@import "../../assets/common.wxss";
+@import "../../assets/icon/iconfont.wxss";
+page {
+  height:100%;
+  background-color:#f1f1f1;
+}
+
+.home-header {
+  display: flex;
+  padding: 20px 20px;
+  background-color: rgba(128, 0, 0, 0.8);
+}
+
+.home-header .home-avatar {
+  border-radius: 50%;
+  width: 3rem;
+  height: 3rem;
+  border: 1px solid #ffffff;
+  background-color: #ffffff;
+}
+
+.home-header .home-user-info {
+  flex-grow: 1;
+  padding-left: 10px;
+  color: #ffffff;
+}
+
+.home-header .home-user-info .home-user-nickname {
+  display: block;
+  line-height: 2rem;
+}
+
+.home-header .home-user-info .home-user-level {
+  display: block;
+  font-size: .8rem;
+}
+
+.home-order-list, .home-order-tags {
+  padding: 8px;
+  background-color: #ffffff;
+  border-bottom: 1px solid #dddddd;
+  position: relative;
+}
+
+.home-order-list text {
+  line-height: 1rem;
+}
+
+.home-order-list .home-order-list-placeholder {
+  display: inline-block;
+  color: #cecece;
+  font-size: .8rem;
+  line-height: 1rem;
+  height: 1rem;
+  position: absolute;
+  right: 8px;
+}
+
+.home-order-tags {
+  display: flex;
+  text-align: center;
+}
+
+.home-order-tags .home-order-tag {
+  flex: 0 0 25%;
+}
+
+.home-order-tags .home-order-tag text {
+  display: block;
+  color: #333;
+}
+
+.home-order-tags .home-order-tag text.iconfont {
+  font-size: 1.8rem;
+}
+
+.home-list-view {
+  background-color: #ffffff;
+  margin-top: 1rem;
+}
+
+.home-list-view .home-list-item {
+  padding: 8px;
+  border-bottom: 1px solid #dddddd;
+  position: relative;
+}
+
+.home-list-view .home-list-item .iconfont {
+  color: #f10000;
+  font-size: 1.2rem;
+}
+
+.home-list-view .home-list-item .iconfont:last-child {
+  position: absolute;
+  right: 8px;
+  color: #dddddd;
+  font-size: .8rem;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.home-list-view .home-list-item:last-child {
+  border-bottom: 0;
+}
