--- a/pages/home/index.wxml
+++ b/pages/home/index.wxml
@@ -4,51 +4,43 @@
     <image class="home-avatar" src="{{user.avatar}}"></image>
     <view class="home-user-info">
       <text class="home-user-nickname">{{user.nickname}}</text>
-      <text class="home-user-level">{{user.level}}</text>
     </view>
   </view>
 
   <view class="home-order-list">
       <text>我的订单</text>
-      <view class="home-order-list-placeholder">
-        <text>全部订单</text>
-        <text class="iconfont icon-arrow-right"></text>
-      </view>
+      <navigator url="/pages/order/index" class="home-order-list-placeholder">
+        <text>查看全部订单</text>
+      </navigator>
   </view>
   <view class="home-order-tags">
-    <view class="home-order-tag">
+    <navigator url="/pages/order/index?status=1" class="home-order-tag">
       <text class="iconfont icon-unpaid"></text>
       <text>待支付</text>
-    </view>
-    <view class="home-order-tag">
+    </navigator>
+    <navigator url="/pages/order/index?status=4" class="home-order-tag">
       <text class="iconfont icon-await-shipping"></text>
       <text>待发货</text>
-    </view>
-    <view class="home-order-tag">
+    </navigator>
+    <navigator url="/pages/order/index?status=6" class="home-order-tag">
       <text class="iconfont icon-await-receive"></text>
       <text>待收货</text>
-    </view>
-    <view class="home-order-tag">
+    </navigator>
+    <navigator url="/pages/order/index?status=7" class="home-order-tag">
       <text class="iconfont icon-comment"></text>
-      <text>待评价</text>
-    </view>
+      <text>退款/售后</text>
+    </navigator>
   </view>
 
   <view class="home-list-view">
-    <view class="home-list-item">
-      <text class="iconfont icon-favourite"></text>
-      我的收藏
-      <text class="iconfont icon-arrow-right"></text>
-    </view>
-    <view class="home-list-item">
-      <text class="iconfont icon-comments"></text>
-      我的评价
-      <text class="iconfont icon-arrow-right"></text>
-    </view>
-    <view class="home-list-item" bindtap="addressManager">
-      <text class="iconfont icon-address"></text>
+    <navigator bingtap="building" class="home-list-item">
+      为你选酒
+    </navigator>
+    <navigator url="/pages/address/index" class="home-list-item">
       收货地址
-      <text class="iconfont icon-arrow-right"></text>
-    </view>
+    </navigator>
+    <navigator bingtap="building" class="home-list-item">
+      优惠券
+    </navigator>
   </view>
 </view>
