--- a/pages/home/index.wxss
+++ b/pages/home/index.wxss
@@ -7,28 +7,31 @@ page {
 }
 
 .home-header {
-  display: flex;
+  display: block;
   padding: 20px 20px;
   background-color: rgba(128, 0, 0, 0.8);
 }
 
 .home-header .home-avatar {
+  display: block;
   border-radius: 50%;
-  width: 3rem;
-  height: 3rem;
+  width: 4rem;
+  height: 4rem;
   border: 1px solid #ffffff;
   background-color: #ffffff;
+  margin: 0 auto .5rem;
 }
 
 .home-header .home-user-info {
-  flex-grow: 1;
-  padding-left: 10px;
+  display: block;
+  text-align: center;
   color: #ffffff;
 }
 
 .home-header .home-user-info .home-user-nickname {
   display: block;
-  line-height: 2rem;
+  font-size: 1rem;
+  line-height: 1.8rem;
 }
 
 .home-header .home-user-info .home-user-level {
@@ -77,7 +80,7 @@ page {
 
 .home-list-view {
   background-color: #ffffff;
-  margin-top: 1rem;
+  margin-top: .5rem;
 }
 
 .home-list-view .home-list-item {
@@ -86,15 +89,11 @@ page {
   position: relative;
 }
 
-.home-list-view .home-list-item .iconfont {
-  color: #f10000;
-  font-size: 1.2rem;
-}
-
-.home-list-view .home-list-item .iconfont:last-child {
+.home-list-view .home-list-item::after {
+  content: "\e66b";
   position: absolute;
   right: 8px;
-  color: #dddddd;
+  color: #a3a3a3;
   font-size: .8rem;
   top: 50%;
   transform: translateY(-50%);
