--- a/assets/common.wxss
+++ b/assets/common.wxss
@@ -1,3 +1,21 @@
 page {
   background-color: #fafafa;
 }
+
+.checkbox {
+  font-family:"iconfont" !important;
+  font-size:16px;
+  font-style:normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  content: "\e628";
+  color: #870020;
+  border: none;
+  margin: 0;
+  padding: 0;
+  display: inline-block;
+}
+
+.checkbox:checked {
+  content: "\e620";
+}
