--- a/pages/address/index.wxml
+++ b/pages/address/index.wxml
@@ -3,27 +3,35 @@
   <view wx:for="{{address}}" class="address-item">
     <view>
       <view class="address-meta">
-        <text>{{address.consignee}}</text>
-        <text>{{address.mobile}}</text>
+        <text>{{item.consignee}}</text>
+        <text>{{item.mobile}}</text>
       </view>
 
-      <text>{{address.address}}</text>
+      <text class="address-detail">
+        <icon class="address-default-tag" wx:if="{{item.is_default}}">[默认]</icon>
+        {{item.address}}
+      </text>
     </view>
     <view class="address-opera">
       <label>
-        <checkbox name="is_default" checked="{{item.is_default}}" data-id="{{item.id}}" bindtap="defaultAddress"/>
+        <checkbox class="checkbox" name="is_default" checked="{{item.is_default}}" data-id="{{item.id}}" bindtap="defaultAddress"/>
       </label>
+      <view class="block-empty"></view>
 
-      <a href="javascript:void(0);" class="address-trash iconfont icon-trash" data-id="{{item.id}}" bindtap="deleteAddress">删除</a>
-      <a href="javascript:void(0);" class="address-edit iconfont icon-edit" data-id="{{item.id}}" bindtap="editAddress">编辑</a>
+      <navigator url="/pages/address/edit?id={{item.id}}" class="address-edit iconfont icon-edit"></navigator>
+      <view href="javascript:void(0);" class="address-trash iconfont icon-trash" data-id="{{item.id}}" bindtap="deleteAddress"></view>
     </view>
   </view>
 </block>
 
-<block wx:if="{{address.length == 0}}">
-  <icon class="iconfont icon-address-empty"></icon>
+<block wx:else>
+<view class="address-empty">
+  <icon class="iconfont icon-location"></icon>
   <text>您还没有保存常用地址哦~</text>
+</view>
 </block>
 </view>
 
-<button type="warn" bindtap="addAddress" class="btn btn-primary">新建地址</button>
+<view class="address-toolbar">
+  <navigator url="/pages/address/add" class="btn btn-primary iconfont icon-plus">添加新地址</navigator>
+</view>
