--- a/pages/address/index.wxss
+++ b/pages/address/index.wxss
@@ -37,12 +37,15 @@
   padding: .5rem 0;
   display: flex;
   margin-top: .5rem;
+  align-items: center;
+  color: #a3a3a3;
+  font-size: .8rem;
 }
 
 .address .address-item .address-opera .address-edit, .address .address-item .address-opera .address-trash {
   color: #a3a3a3;
-  font-size: 1.8rem;
-  line-height: 2rem;
+  font-size: 1.4rem;
+  line-height: 1.6rem;
   margin-left: .5rem;
 }
 
@@ -67,5 +70,24 @@
   margin: .5rem auto;
   border-radius: 5px;
   background-color: #870020;
-  line-height: 2rem;
+  line-height: 2.2rem;
+}
+
+.address-empty {
+  display: block;
+  text-align: center;
+  color: #656565;
+  margin-top: 20%;
+}
+
+.address-empty icon {
+  font-size: 6rem;
+  color: #d0d0d0;
+}
+
+.address-empty text {
+  display: block;
+  line-height: 1.4rem;
+  font-size: .8rem;
+  color: #d0d0d0;
 }
