--- a/pages/home/index.wxss
+++ b/pages/home/index.wxss
@@ -9,7 +9,7 @@ page {
 .home-header {
   display: block;
   padding: 20px 20px;
-  background-color: rgba(128, 0, 0, 0.8);
+  background-color: #ffffff;
 }
 
 .home-header .home-avatar {
@@ -20,12 +20,13 @@ page {
   border: 1px solid #ffffff;
   background-color: #ffffff;
   margin: 0 auto .5rem;
+  box-shadow: 0 0 7px #e5e5e5;
 }
 
 .home-header .home-user-info {
   display: block;
   text-align: center;
-  color: #ffffff;
+  color: #333333;
 }
 
 .home-header .home-user-info .home-user-nickname {
@@ -42,8 +43,9 @@ page {
 .home-order-list, .home-order-tags {
   padding: 8px;
   background-color: #ffffff;
-  border-bottom: 1px solid #dddddd;
+  border-bottom: 1px solid #e5e5e5;
   position: relative;
+  border-top: 1px solid #e5e5e5;
 }
 
 .home-order-list text {
@@ -52,7 +54,7 @@ page {
 
 .home-order-list .home-order-list-placeholder {
   display: inline-block;
-  color: #cecece;
+  color: #a3a3a3;
   font-size: .8rem;
   line-height: 1rem;
   height: 1rem;
@@ -71,7 +73,7 @@ page {
 
 .home-order-tags .home-order-tag text {
   display: block;
-  color: #333;
+  color: #870020;
 }
 
 .home-order-tags .home-order-tag text.iconfont {
@@ -87,6 +89,8 @@ page {
   position: relative;
   margin-top: .5rem;
   background-color: #ffffff;
+  border-top: 1px solid #e5e5e5;
+  border-bottom: 1px solid #e5e5e5;
 }
 
 .home-list-view .home-list-item::after {
