--- a/pages/category/index.wxss
+++ b/pages/category/index.wxss
@@ -1,24 +1,72 @@
 /* pages/category/index.wxss */
+page {
+  height: 100%;
+  background-color: #fafafa;
+}
+
+.category {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
 .categories {
-  display:flex;
-  flex-direction:row;
-  flex-wrap:wrap;
-  align-content:center;
-  justify-content:left;
-  padding:8px;
 }
 
 .categories .category-item {
-  flex: 0 0 30%;
-  width: 30%;
-  margin-right: 3.33%;
+  padding: .5rem;
   margin-bottom: 1rem;
 }
 
-.categories .category-item:nth-child(3n) {
-  margin-right: 0;
+.categories .category-item.current {
+  color: #870020;
+  background-color: #ffffff;
 }
 
-.categories .category-image {
-  width: 100%;
+.product-list {
+  flex-grow: 1;
+  padding: .5rem;
+  background-color: #ffffff;
+}
+
+.product-list .product-group .sub-category {
+  font-size: 1rem;
+  line-height: 1.8rem;
+  margin-bottom: .5rem;
+}
+
+.product-list .product-item {
+  border-bottom: 1px solid #ddd;
+  padding: .5rem;
+  display: flex;
+}
+
+.product-list .product-item .product-image {
+  width: 10rem;
+}
+
+.product-list .product-item .product-item-info {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.product-list .product-item .product-item-info .product-name {
+  flex-grow: 1;
+}
+
+.product-list .product-item .product-item-info .product-item-meta {
+  position: relative; 
+}
+
+.product-list .product-item .product-item-info .product-item-meta .product-price {
+  color: #f10000;
+}
+
+.product-list .product-item .product-item-info .product-item-meta .product-sale-count {
+  color: #ddd;
+  position: absolute;
+  font-size: .8rem;
+  top: .2rem;
+  right: 0;
 }
