--- a/pages/product/detail.wxml
+++ b/pages/product/detail.wxml
@@ -5,7 +5,7 @@
   >
   <block wx:for="{{product.gallery}}" wx:key="{{_index}}">
     <swiper-item>
-      <image src="{{item}}" class="slide-image" style="height:{{banner_heights[current_banner]}}px;width:{{screen_width}}px;" bindload="imageLoad" bindtap="galleryTap" data-id="{{_index}}"/>
+      <image src="{{item}}" class="slide-image" style="height:{{banner_heights[current_banner]}}px;width:{{screen_width}}px;" bindload="imageLoad" catchtap="galleryTap" data-id="{{_index}}"/>
     </swiper-item>
   </block>
 </swiper>
@@ -22,8 +22,8 @@
     <text class="produce-sale-count">月销: {{product.sale_count}}</text>
   </view>
   <view class="product-opera">
-    <view wx:if="{{product.favouriate}}" bindtap="toogleFav" class="iconfont icon-fav-checked"></view>
-    <view wx:if="{{!product.favouriate}}" bindtap="toogleFav" class="iconfont icon-fav"></view>
+    <view wx:if="{{product.favouriate}}" catchtap="toogleFav" class="iconfont icon-fav-checked"></view>
+    <view wx:if="{{!product.favouriate}}" catchtap="toogleFav" class="iconfont icon-fav"></view>
     
     <button open-type="share" class="iconfont icon-share"></button>
   </view>
@@ -98,7 +98,7 @@
     </view>
   </view>
 
-  <button class="btn btn-primary product-popup-confirm" bindtap="confirmBuy">确定</button>
+  <button class="btn btn-primary product-popup-confirm" catchtap="confirmBuy">确定</button>
 </view>
 
 <view class="product-detail-toolbar">
