--- a/pages/order/index.wxml
+++ b/pages/order/index.wxml
@@ -15,28 +15,30 @@
 <wxs module="filters" src="../../assets/utils.wxs"></wxs>
 
 <scroll-view scroll-y="true" class="order-list">
-  <navigator url="/pages/order/detail?sn={{order.order_sn}}" wx:for="{{order_list}}" wx:for-item="order" class="order-item">
-    <view class="order-item-header">
-      <text class="order-sn">订单号: {{order.order_sn}}</text>
-      <text class="order-status">{{order.show_status}}</text>
-    </view>
+  <view wx:for="{{order_list}}" wx:for-item="order" class="order-item">
+    <navigator url="/pages/order/detail?sn={{order.order_sn}}">
+      <view class="order-item-header">
+        <text class="order-sn">订单号: {{order.order_sn}}</text>
+        <text class="order-status">{{order.show_status}}</text>
+      </view>
 
-    <view class="order-shop-info">商家: {{order.shop_name}}</view>
-    <view class="order-detail">
-      <view class="order-detail-item" wx:for="{{order.order_detail}}" wx:for-item="order_detail">
-        <image src="{{order_detail.image}}" mode="widthFix"/>
-        <view class="order-detail-item-info">
-          <text class="order-detail-name">{{order_detail.product_name}}</text>
-          <view class="order-detail-meta">
-            <text class="order-detail-price">￥{{filters.toFix(order_detail.price, 2)}}</text>
-            <text class="order-detail-count">x{{order_detail.count}}</text>
+      <view class="order-shop-info">商家: {{order.shop_name}}</view>
+      <view class="order-detail">
+        <view class="order-detail-item" wx:for="{{order.order_detail}}" wx:for-item="order_detail">
+          <image src="{{order_detail.image}}" mode="widthFix"/>
+          <view class="order-detail-item-info">
+            <text class="order-detail-name">{{order_detail.product_name}}</text>
+            <view class="order-detail-meta">
+              <text class="order-detail-price">￥{{filters.toFix(order_detail.price, 2)}}</text>
+              <text class="order-detail-count">x{{order_detail.count}}</text>
+            </view>
           </view>
         </view>
+        <view class="order-detail-summary">
+          共{{order.detail_count}}件，实付<text class="order-detail-price">￥{{filters.toFix(order.amount)}}</text>
+        </view>
       </view>
-      <view class="order-detail-summary">
-        共{{order.detail_count}}件，实付<text class="order-detail-price">￥{{filters.toFix(order.amount)}}</text>
-      </view>
-    </view>
+    </navigator>
     <view class="order-item-toolkit">
       <block wx:if="{{order.status == 1}}">
         <button class="btn btn-negative" catchtap="cancelOrder" data-sn="{{order.order_sn}}">取消订单</button>
@@ -47,6 +49,10 @@
         <navigator url="/pages/order/track?sn={{order.order_sn}}" class="btn btn-negative">物流跟踪</navigator>
         <button class="btn btn-positive" catchtap="receiveOrder" data-sn="{{order.order_sn}}">确认收货</button>
       </block>
+
+      <block wx:if="{{order.status == 7}}">
+        <button class="btn btn-negative" catchtap="rollbackOrder" data-sn="{{order.order_sn}}">申请退单</button>
+      </block>
     </view>
-  </navigator>
+  </view>
 </scroll-view>
