--- a/pages/order/detail.wxml
+++ b/pages/order/detail.wxml
@@ -1,4 +1,73 @@
 <!--pages/order/detail.wxml-->
-<view class="order">
-  
+<wxs module="filters" src="../../assets/utils.wxs"></wxs>
+
+<view class="order-pay">
+  <view class="order-shipping-info">
+    <icon class="iconfont icon-location"></icon>
+    <view class="order-shipping">
+      <view>
+        <text>收货人: {{order.consignee}}</text>
+        <text>{{order.mobile}}</text>
+      </view>
+
+      <view>
+        <label>收货地址: </label>
+        <text>{{order.address}}</text>
+      </view>
+    </view>
+  </view>
+
+  <view class="product-info">
+    <view class="shop-info">
+      <icon class="iconfont icon-shop-title"></icon>
+      <text>{{order.shop_name}}</text>
+      <text class="order-status">{{order.show_status}}</text>
+    </view>
+    <view class="product-list">
+      <view class="product-item" wx:for="{{order.order_detail}}">
+        <image class="product-item-image" src="{{item.img}}"/>
+        <view class="product-item-info">
+          <text class="product-item-name">{{item.product_name}}</text>
+          <view class="product-item-meta">
+            <text>￥{{filters.toFix(item.product_price, 2)}}</text>
+            <text>x{{item.count}}</text>
+          </view>
+        </view>
+      </view>
+    </view>
+  </view>
+
+  <view class="summary">
+    <view class="summary-item">
+      <label>商品金额</label>
+      <text>￥{{filters.toFix(order.product_amount, 2)}}</text>
+    </view>
+
+    <view class="summary-item">
+      <label>运费</label>
+      <text>+ ￥{{filters.toFix(order.delivery_fee, 2)}}</text>
+    </view>
+
+    <view class="summary-item">
+      <label>实付</label>
+      <text>￥{{filters.toFix(order.amount, 2)}}</text>
+    </view>
+  </view>
+</view>
+
+<view class="checkout-toolbar" wx:if="{{order.status == 1 || order.status == 6 || order.status == 7}}">
+  <view class="block-empty"></view>
+  <block wx:if="{{order.status == 1}}">
+    <button class="btn btn-negative" catchtap="cancelOrder" data-sn="{{order.order_sn}}">取消订单</button>
+    <navigator url="/pages/order/pay?sn={{order.order_sn}}" class="btn btn-positive">立即支付</navigator>
+  </block>
+
+  <block wx:if="{{order.status == 6}}">
+    <navigator url="/pages/order/track?sn={{order.order_sn}}" class="btn btn-negative">物流跟踪</navigator>
+    <button class="btn btn-positive" catchtap="receiveOrder" data-sn="{{order.order_sn}}">确认收货</button>
+  </block>
+
+  <block wx:if="{{order.status == 7}}">
+    <button class="btn btn-negative" catchtap="rollbackOrder" data-sn="{{order.order_sn}}">申请退单</button>
+  </block>
 </view>
