--- a/pages/order/detail.wxss
+++ b/pages/order/detail.wxss
@@ -1,1 +1,225 @@
 /* pages/order/detail.wxss */
+@import "../../assets/icon/iconfont.wxss";
+page {
+  background-color: #f5f5f5;
+}
+
+button {
+  line-height:auto;
+}
+
+button::after {
+  border: none;
+  line-height:auto;
+}
+
+/* 地址栏 */
+.order-shipping-info {
+  background-color: #ffffff;
+  display: flex;
+  align-items: center;
+  font-size: 1rem;
+  line-height: 1.6rem;
+  color: #a3a3a3;
+  padding: .5rem;
+}
+
+.order-shipping-info icon {
+  font-size: 1.6rem;
+  margin-right: .5rem;
+}
+
+.order-shipping-info .order-shipping {
+  flex-grow: 1;
+}
+
+.order-shipping-info view {
+  position: relative;
+}
+
+.order-shipping-info view:first-child {
+  margin-bottom: .5rem;
+}
+
+.order-shipping-info view:first-child text:last-child {
+  position: absolute;
+  right: 0;
+}
+
+/* 产品列表 */
+.product-info {
+  margin-top: .5rem;
+  background-color: #ffffff;
+}
+
+.product-info .shop-info {
+  font-size: 1rem;
+  padding: .5rem;
+  display: flex;
+  align-items: center;
+}
+
+.product-info .shop-info .order-status {
+  color: #870020;
+  flex-grow: 1;
+  text-align: right;
+}
+
+.product-info .shop-info icon {
+  font-size: 1.2rem;
+  margin-right: .5rem;
+  color: #565656;
+}
+
+.product-info .product-list {
+  background-color: #f5f5f5;
+  padding-left: .5rem;
+}
+
+.product-info .product-list .product-item {
+  padding:.5rem .5rem .5rem 0;
+  display: flex;
+  border-bottom: 1px solid #e5e5e5;
+}
+
+.product-info .product-list .product-item:last-child {
+  border-bottom: 0;
+}
+
+.product-info .product-list .product-item .product-item-image {
+  width: 4rem;
+  height: 4rem;
+  margin-right: .5rem;
+}
+
+.product-info .product-list .product-item .product-item-info {
+  flex-grow: 1;
+}
+
+.product-info .product-list .product-item .product-item-info .product-item-name {
+  display: block;
+  height: 2rem;
+  font-size: .8rem;
+  margin-bottom: 1rem;
+}
+
+.product-info .product-list .product-item .product-item-info .product-item-meta {
+  font-size: .8rem;
+  line-height: 1rem;
+  display: flex;
+}
+
+.product-info .product-list .product-item .product-item-info .product-item-meta text:first-child {
+  flex-grow: 1;
+}
+
+/* 其他信息 */
+.meta-info-list {
+  background-color: #ffffff;
+  padding-left: .5rem;
+  margin-bottom: .5rem;
+}
+
+.meta-info-list .meta-info {
+  display: flex;
+  padding: .5rem .5rem .5rem 0;
+  border-bottom: 1px solid #e5e5e5;
+  align-items: center;
+  position: relative;
+}
+
+.meta-info-list .meta-info.meta-info-with-arrow {
+  padding-right: 1.5rem;
+}
+
+.meta-info-list .meta-info.meta-info-with-arrow::after {
+  content: "\e66b";
+  font-size: .8rem;
+  position: absolute;
+  line-height: .8rem;
+  display: inline-block;
+  right: .5rem;
+  top: 50%;
+  transform: translateY(-50%);
+  font-family:"iconfont" !important;
+  font-style:normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.meta-info-list .meta-info:last-child {
+  border-bottom: 0;
+}
+
+.meta-info-list .meta-info label {
+  margin-right: .5rem;
+}
+
+.meta-info-list .meta-info text, .meta-info-list .meta-info .meta-info-input-view,.meta-info-list .meta-info view {
+  flex-grow: 1;
+  text-align: right;
+  color: #a3a3a3;
+}
+
+.meta-info-list .meta-info .meta-info-input-view input {
+  text-align: left;
+  color: #333333;
+}
+
+.meta-info-list .meta-info .meta-info-price {
+  color: #870020;
+}
+
+/* 金额合计 */
+.summary {
+  margin-bottom: 4rem;
+  background-color: #ffffff;
+}
+
+.summary .summary-item {
+  display: flex;
+  padding: .5rem .5rem 0;
+}
+
+.summary .summary-item:last-child {
+  padding-bottom: .5rem;
+}
+
+.summary .summary-item text {
+  text-align: right;
+  color: #a3a3a3;
+  flex-grow: 1;
+}
+
+/* 底部操作栏 */
+.checkout-toolbar {
+  position: fixed;
+  display: flex;
+  bottom: 0;
+  width: 95%;
+  background-color: #ffffff;
+  border-top: 1px solid #d0d0d0;
+  justify-content: center;
+  align-items: center;
+  padding: .5rem 2.5%;
+}
+
+.checkout-toolbar .block-empty {
+  flex-grow: 1;
+  display: inline-flex;
+}
+
+.btn {
+  padding: .5rem 1rem;
+  font-size: .8rem;
+  line-height: 1rem;
+  margin-left: .5rem;
+  border-radius: 5px;
+  border: 1px solid #a3a3a3;
+  color: #a3a3a3;
+}
+
+.btn-positive {
+  border-color: #870020;
+  color: #870020;
+}
