--- a/pages/order/index.wxss
+++ b/pages/order/index.wxss
@@ -18,13 +18,14 @@ button {
   top: 0;
   background-color: #ffffff;
   z-index: 1;
+  box-shadow: 0 0 5px #f5f5f5;
 }
 
 .order-status-tabs .order-status-tab {
   border-bottom: 2px solid #ffffff;
   font-size: .8rem;
   color: #a3a3a3;
-  line-height: 2rem;
+  line-height: 2.5rem;
   flex-grow: 1;
   text-align: center;
 }
@@ -35,7 +36,7 @@ button {
 }
 
 .order-list {
-  margin-top: 2.5rem;
+  margin-top: 2.8rem;
 }
 
 .order-list .order-item {
