--- a/pages/cart/index.wxss
+++ b/pages/cart/index.wxss
@@ -4,18 +4,18 @@
   
 }
 
-.cart .shop {
+/* .cart .shop {
   background-color: #ffffff;
   margin-bottom: 30rpx;
   padding-bottom: 30rpx;
   border-bottom: 2rpx solid #e5e5e5;
-}
+} */
 
-.cart .shop .shop-info {
+/* .cart .shop .shop-info {
   display: flex;
   padding: 30rpx 20rpx;
   align-items: center;
-}
+} */
 
 .cart .shop .shop-info .checkbox {
   color: #a3a3a3;
@@ -55,17 +55,17 @@
 }
 
 .cart-product .checkbox[checked] {
-  color: #ff1400;
+  color: #121212;
 }
 
 .cart-product .cart-product-img {
-  width: 190rpx;
-  height: 190rpx;
+  width: 180rpx;
+  height: 180rpx;
   margin: 0 20rpx;
 }
 
 .cart .cart-product-info {
-  flex-grow: 1;
+  /* flex-grow: 1; */
 }
 
 .cart .cart-product-info .cart-product-name {
@@ -84,7 +84,7 @@
 
 .cart .cart-product-info .cart-product-toolkit .cart-product-price {
   color: #ff1400;
-  flex-grow: 1;
+  /* flex-grow: 1; */
 }
 
 .cart .cart-product-info .cart-product-toolkit .cart-product-count-group {
@@ -99,7 +99,7 @@
 }
 
 .cart-product-minus, .cart-product-plus {
-  line-height: 42rpx;
+  line-height: 32rpx;
   vertical-align: middle;
   padding: 12rpx;
   background-color: #ffffff;
@@ -167,7 +167,7 @@
 }
 
 .cart-checkout-toolkit .checkbox[checked] {
-  color: #ff1400;
+  color: #121212;
 }
 
 .cart-checkout-toolkit .cart-check-all text {
@@ -188,7 +188,7 @@
 }
 
 .cart-checkout-toolkit .cart-checkout-btn {
-  background-color: #ff1400;
+  background-color: #020202;
   color: #ffffff;
   padding: 0 80rpx;
   border-left: 2rpx solid #e5e5e5;
@@ -242,4 +242,93 @@
   border: 2rpx solid #ff1400;
   padding: 4rpx 8rpx;
   display: inline-block;
+}
+
+
+
+.flex {
+  display: flex;
+}
+
+.flex-row {
+  flex-direction: row;
+}
+
+.flex-row-r {
+  flex-direction: row-reverse;
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
+.flex-column-r {
+  flex-direction: column-reverse;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
+.flex-between {
+  justify-content: space-between;
+}
+
+.flex-items-center {
+  align-items: center;
+}
+
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
+.fixed {
+  position: fixed;
+}
+
+.cart-product {
+  width: 690rpx;
+  height: 270rpx;
+  margin: 20rpx;
+  padding: 0 10rpx;
+  border-radius: 10rpx;
+  background-color: #ffffff;
+}
+
+.cart-product .cart-product-l {
+  width: 240rpx;
+}
+
+.cart-product .cart-product-r {
+  width: 420rpx;
+  height: 190rpx;
+}
+
+.cart-product-r .text1 {
+  color: #333333;
+  font-size: 32rpx;
+}
+
+.cart-product-count-group {
+  width: 250rpx;
+  border: 1rpx solid #DDDDDD;
+}
+
+.cart-product-count-group .cart-product-minus {
+  margin: 10rpx;
+  padding: 10rpx;
+}
+
+.cart-product-count-group .cart-product-plus {
+  margin: 10rpx;
+  padding: 10rpx;
+}
+
+.cart-product .action {
+  height: 64rpx;
+  line-height: 64rpx;
 }
